--- a/0x0C-web_server/5-design_a_beautiful_404_page.html
+++ b/0x0C-web_server/5-design_a_beautiful_404_page.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><title>404 Not Found</title></head>
-<body style="background-color:cornflowerblue; background-image: url(https://i.imgur.com/3OmHZV7.jpeg);">
-    <div><center><p>Ceci n'est pas une page</p></center></div>
-    </div><hr><center>nginx/1.10.3 (Ubuntu)</center></div>
+<body style="background-color:cornflowerblue; background-image: url(https://i.imgur.com/3OmHZV7.jpeg); background-repeat: no-repeat; background-size: cover;">
+    <div><center><p style="color:cornsilk;">Ceci n'est pas une page</p></center></div>
 </body>
 </html>
